--- a/PersonService.Api/appsettings.json
+++ b/PersonService.Api/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "MongoDbSettings": {
+        "ConnectionString": "mongodb://localhost:27017",
+        "DatabaseName": "PersonDb",
+        "CollectionName": "Persons"
+    },
+    "ConnectionStrings": {
+        "MongoDbConnection": "mongodb://localhost:27017/PersonDb"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
