--- a/PersonService.Presentation/PersonService.Presentation.csproj
+++ b/PersonService.Presentation/PersonService.Presentation.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="MediatR" Version="11.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.38" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\PersonService.Application\PersonService.Application.csproj" />
+	</ItemGroup>
+
 </Project>
