--- a/ReportsService.Api/appsettings.json
+++ b/ReportsService.Api/appsettings.json
@@ -1,8 +1,6 @@
 {
-    "MongoDbSettings": {
-        "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "PersonDb",
-        "CollectionName": "Persons"
+    "ConnectionStrings": {
+        "PostgreConnection": "Server=localhost;Port=5432;Database=reportdb;User Id=admin;Password=admin!5;"
     },
     "Logging": {
         "LogLevel": {
