--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,3 +8,15 @@ services:
         - "27017:27017"
     volumes:
         - mongo_data:/data/db
+  
+  reportdb:
+    container_name: reportdb
+    environment:
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=admin!5
+      - POSTGRES_DB=reportdb
+    restart: always
+    ports:
+        - "5432:5432"
+volumes:
+  postgres_data:
