--- a/Client/Dockerfile
+++ b/Client/Dockerfile
@@ -1,11 +1,20 @@
-FROM node:latest AS build
-WORKDIR /usr/src/app
-COPY . .
+FROM node:14 AS builder
+
+WORKDIR /app/dist/client
+
+COPY package*.json ./
 RUN npm install
+
+COPY . .
+
 RUN npm run build
 
-# İkinci aşama: Derlenmiş uygulamayı Nginx üzerine kopyala
-FROM nginx:latest
-COPY --from=build /usr/src/app/dist /usr/share/nginx/html
+FROM nginx:alpine
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/dist/client /usr/share/nginx/html
+
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
