docker-compose-syntax-bug-fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,9 @@ services:
   
   web.client:
     image: web.client
-    context: ./Client
-    dockerfile: ./Dockerfile
+    build:
+      context: ./Client
+      dockerfile: ./Dockerfile
 
 volumes:
   mongo_data:
