--- a/backend/PhoneBook/Services/PersonService/src/PersonService.Api/Dockerfile
+++ b/backend/PhoneBook/Services/PersonService/src/PersonService.Api/Dockerfile
@@ -9,12 +9,13 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["PersonService.Api/PersonService.Api.csproj", "PersonService.Api/"]
-COPY ["PersonService.Infrasturcture/PersonService.Infrasturcture.csproj", "PersonService.Infrasturcture/"]
-COPY ["PersonService.Persistance/PersonService.Persistance.csproj", "PersonService.Persistance/"]
-COPY ["PersonService.Application/PersonService.Application.csproj", "PersonService.Application/"]
-COPY ["PersonService.Domain/PersonService.Domain.csproj", "PersonService.Domain/"]
-COPY ["PersonService.Presentation/PersonService.Presentation.csproj", "PersonService.Presentation/"]
-RUN dotnet restore "./PersonService.Api/./PersonService.Api.csproj"
+COPY ["External/PersonService.Infrasturcture/PersonService.Infrasturcture.csproj", "External/PersonService.Infrasturcture/"]
+COPY ["External/PersonService.Persistance/PersonService.Persistance.csproj", "External/PersonService.Persistance/"]
+COPY ["Core/PersonService.Application/PersonService.Application.csproj", "Core/PersonService.Application/"]
+COPY ["Core/PersonService.Domain/PersonService.Domain.csproj", "Core/PersonService.Domain/"]
+COPY ["External/PersonService.Presentation/PersonService.Presentation.csproj", "External/PersonService.Presentation/"]
+
+RUN dotnet restore "PersonService.Api/PersonService.Api.csproj"
 COPY . .
 WORKDIR "/src/PersonService.Api"
 RUN dotnet build "./PersonService.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
@@ -26,4 +27,6 @@ RUN dotnet publish "./PersonService.Api.csproj" -c $BUILD_CONFIGURATION -o /app/
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+# Giriş noktasını belirle
 ENTRYPOINT ["dotnet", "PersonService.Api.dll"]
