--- a/backend/PhoneBook/Services/ReportsService/src/ReportsService.Api/ReportsService.Api.csproj
+++ b/backend/PhoneBook/Services/ReportsService/src/ReportsService.Api/ReportsService.Api.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>bef6e102-38b4-48ca-83d1-4d166d98d209</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
