--- a/backend/PhoneBook/Services/PersonService/src/PersonService.Api/PersonService.Api.csproj
+++ b/backend/PhoneBook/Services/PersonService/src/PersonService.Api/PersonService.Api.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <UserSecretsId>f7cd1b37-2f8a-4308-b0a2-891bf0df5ee0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..\..\..</DockerfileContext>
   </PropertyGroup>
 
 	<ItemGroup>
