--- a/backend/PhoneBook/Services/ReportsService/src/Core/ReportsService.Application/ReportsService.Application.csproj
+++ b/backend/PhoneBook/Services/ReportsService/src/Core/ReportsService.Application/ReportsService.Application.csproj
@@ -1,13 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ReportsService.Domain\ReportsService.Domain.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.1" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\ReportsService.Domain\ReportsService.Domain.csproj" />
+	</ItemGroup>
 
 </Project>
